unpackaged/main/default/objects/Activity/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Comment</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Supervisor Call</fullName>
            </value>
            <value>
                <fullName>MC/GC Issuance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>