unpackaged/main/default/objects/Activity/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>Field used for compact layout.</description>
    <label>Internal Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>