unpackaged/main/default/objects/Activity/fields/MC_GC_Number__c.field-meta.xml
<CustomField>
    <fullName>MC_GC_Number__c</fullName>
    <label>MC/GC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>